2007-07-22  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/Makefile.am (man_MANS, EXTRA_DIST):
	include fvwm.1 in dist and install it

2007-07-19  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/Makefile.am (distclean-local):
	* images/Makefile.am (%.png):
	(distclean-local):
	* images/svg_rendering/Makefile.am (%.png):
	(distclean-local):
	* Makefile.am (%.html):
	(distclean-local):
	fixed make distcheck

2007-07-17  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* doc/Makefile.am:
	* doc/images/Makefile.am:
	fix dependency checking.

	* doc/images/svg_rendering/*:
	Added Simon's SVG documentation.

2007-07-15  Simon Griph  <simon(at)griph(dot)se>

	* fvwm/images.xml:
	added descriptive images to html output

2007-07-13  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* groupedCommands.html:
	* commands/EchoFuncDefinition.xml:
	fix cut&paste errors.

	* Makefile.am:
	Allow make to check build dependencies (of .html files) properly.

	* README:
	Added "HOWTO add documentation for a new FVWM command" section.

2007-07-12  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* groupedCommands.html:
	* util/cmds.txt:
	* allCommands.html:
	add EchoFuncDefinition to static html files

2007-07-12  Renato Caldas  <seventhguardian@gmail.com>

	* commands/Makefile.am:
	break COMMANDS into multiple lines

	* commands/EchoFuncDefinition.xml:
	* commands/Makefile.am:
	* fvwm/userFunctions.xml:
	documented new command EchoFuncDefinition

2007-07-07  Simon Griph  <simon(at)griph(dot)se>

	* fvwm/conditionals.xml:
	clarified that comma is the prefered condition separator

2007-07-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* Makefile.am:
	applied fixes by hadu

2007-06-21  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* fvwm.xsl:
	fix links to sections of "man" page. (fvwm.man.html)

2007-06-16  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* commands/AddButtonStyle.xml:
	* commands/AddTitleStyle.xml:
	* commands/AddToDecor.xml:
	* commands/AddToFunc.xml: